Update app list item layout when changing icon

Bug: 872823
Test: manual, steps in the bug
Change-Id: I4d900b08cd9ae391639c4e4789caf1b0eb1f79ae
Reviewed-on: https://chromium-review.googlesource.com/1169692
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582246}