ash/app_list/views/app_list_item_view.cc
@@ -226,6 +226,8 @@ void AppListItemView::SetIcon(const gfx::ImageSkia& icon) {
                                                kIconShadowColor)));
     icon_shadow_->SetImage(shadowed);
   }
+
+  Layout();
 }
 
 void AppListItemView::SetUIState(UIState ui_state) {
